# rknpu-rs

./: .gitignore  Cargo.toml
assets/: mnist_model_quant.rknn
rknpu/: Cargo.toml
rknpu-cli/: Cargo.toml
rknpu-cli/src/: main.rs
rknpu-cli/src/utils/: yolo.rs
rknpu-converter/: build_docker.sh  convert.py  dockerfile.patch  run_conversion.sh
rknpu-runtime/: Cargo.toml
rknpu-sys/: Cargo.toml  build.rs
rknpu/benches/: matmul.rs
rknpu/src/: error.rs  flags.rs  lib.rs  queries.rs  tensor.rs
rknpu/src/context/: inputs.rs  memory.rs  mod.rs  outputs.rs
rknpu/src/matmul/: mod.rs
rknpu/src/tensors/: attributes.rs  mod.rs  types.rs
scripts/: collect-bench-results-csv.py  generate-tflite-model.py  generate-throughput-plot.py
