[package]
name = "rknpu-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
image.workspace = true
imageproc.workspace = true
ndarray.workspace = true
rknpu = {path = "../rknpu/"}
