[package]
name = "rknpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
half.workspace = true
thiserror.workspace = true
rknpu-sys = {path = "../rknpu-sys/"}

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "matmul"
harness = false
